--- a/pkg/realmd/operation.html
+++ b/pkg/realmd/operation.html
@@ -76,10 +76,10 @@
             </tr>
             <tr>
               <td colspan="3">
-                <div class="realms-op-error" hidden></div>
-                  <pre class="realms-op-diagnostics" hidden>
-                  </pre>
+                <div class="realms-op-error alert alert-danger" hidden>
+                  <span class="pficon pficon-error-circle-o realms-op-message"></span>
                 </div>
+                <pre class="realms-op-diagnostics" hidden></pre>
               </td>
             </tr>
           </table>
