--- a/pkg/realmd/operation.html
+++ b/pkg/realmd/operation.html
@@ -76,7 +76,7 @@
             </tr>
             <tr>
               <td colspan="3">
-                <div class="realms-op-error alert alert-danger" hidden>
+                <div class="realms-op-error alert-danger" hidden>
                   <span class="pficon pficon-error-circle-o realms-op-message"></span>
                 </div>
                 <pre class="realms-op-diagnostics" hidden></pre>
