--- a/pkg/realmd/operation.html
+++ b/pkg/realmd/operation.html
@@ -8,6 +8,15 @@
         <div class="realms-op-fields">
           <p class="realms-op-leave-only-row"></p>
           <table class="form-table-ct realms-op-form">
+            <tr colspan="3" class="realms-op-error" hidden>
+              <td colspan="3">
+                <div class="alert alert-danger">
+                  <span class="pficon pficon-error-circle-o"></span>
+                  <strong class="realms-op-message"></strong>
+                </div>
+                <pre class="realms-op-diagnostics" hidden></pre>
+              </td>
+            </tr>
             <tr class="realms-op-join-only-row">
               <td><label class="control-label" translatable="yes">Domain Address</label></td>
               <td>
@@ -72,14 +81,6 @@
               <td><label class="control-label" translatable="yes">One Time Password</label></td>
               <td>
                 <input class="realms-op-field form-control realms-op-ot-password" type="password" value=""/>
-              </td>
-            </tr>
-            <tr>
-              <td colspan="3">
-                <div class="realms-op-error alert-danger" hidden>
-                  <span class="pficon pficon-error-circle-o realms-op-message"></span>
-                </div>
-                <pre class="realms-op-diagnostics" hidden></pre>
               </td>
             </tr>
           </table>
