--- a/pkg/realmd/operation.html
+++ b/pkg/realmd/operation.html
@@ -8,7 +8,7 @@
         <div class="realms-op-fields">
           <p class="realms-op-leave-only-row"></p>
           <table class="form-table-ct realms-op-form">
-            <tr colspan="3" class="realms-op-error" hidden>
+            <tr class="realms-op-error" hidden>
               <td colspan="3">
                 <div class="alert alert-danger">
                   <span class="pficon pficon-error-circle-o"></span>
